# PKU-Course-Desktop

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  README.md  design-switch-view.md  index.html  package.json  tsconfig.json  vite.config.ts
.github/workflows/: build.yml
docs/: CLAUDE.md  DESIGN.md  README.md  USER_GUIDE.md  USER_GUIDE_CN.md  design-switch-view.md  refactor-plan.md  system.md
src/: App.svelte  app.d.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: README.md  icon.icns
src-tauri/inject-scripts/: hls-player.js  hls.min.js  nav-bar.js  video-detector.js
src-tauri/src/: download.rs  ffmpeg.rs  main.rs  settings.rs  state.rs
src-tauri/src/commands/: browser_nav.rs  download_cmd.rs  files.rs  media.rs  mod.rs  settings_cmd.rs  view.rs
src-tauri/src/ipc/: bridge.rs  mod.rs  routes.rs
src-tauri/src/util/: fmt.rs  log.rs  mod.rs
src-tauri/src/webview/: layout.rs  mod.rs  on_download.rs  setup.rs
src-tauri/src/webview/download_native/: fallback.rs  linux.rs  mod.rs  shared.rs
src/components/: BrowserView.svelte  DownloadPanel.svelte  DownloadTaskItem.svelte  SettingsPanel.svelte  VideoInfoCard.svelte  VideoView.svelte
src/lib/: download-queue.ts  download-utils.ts  naming.ts  store.ts  theme.ts  types.ts
src/styles/: global.css  theme.css
