[package]
name = "PKU Course Desktop"
version = "1.0.0"
description = "A Rust Tauri-based desktop app for PKU course video download"
authors = ["Morgan Chen"]
edition = "2026"
rust-version = "1.77.0"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["devtools", "unstable", "image-png"] }
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-http = { version = "2", features = ["unsafe-headers"] }
tauri-plugin-notification = "2"
tauri-plugin-os = "2"
tauri-plugin-process = "2"
tauri-plugin-shell = "2"
tauri-plugin-window-state = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json", "stream", "cookies"] }
futures = "0.3"
anyhow = "1"
uuid = { version = "1", features = ["v4"] }
chrono = "0.4"
dirs = "5"
regex = "1"
url = "2"
open = "5"

[target.'cfg(target_os = "linux")'.dependencies]
webkit2gtk = "2.0"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
